2003-12-18  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-xpath-expression.c

	Fixed a missing prototype

	* cong-editor-node-element-span.c

	Fixed warnings

	* cong-node.c

	Fixed crash when testing text nodes as being irrelevant whitespace in the case where they haven't yet been added to the tree

	* cong-editor-node-text.c

	Support for middle mouse button paste of PRIMARY
	
	--- Version 0.7.8 ---

2003-12-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-sgml.c

	Warning fixes, and a fix for a stupid parameter mismatch bug that would have caused 100% repeatable crashes if anyone ran this plugin.  Looks like no-one does, I guess...

	* cong-error-dialog.c, cong-modification-set-dtd-ptr.c, global.h, xmledit.c

	Fix more warnings

	* cong-location.c

	Fixed a const-ness warning; added additional checks on CongLocation validity

	* cong-attribute-editor-enumeration.c, cong-attribute-editor.c, cong-dispspec-element.c, cong-editor-area-expander.c, cong-util.c, plugin-convert-case.c

	Casting away constness for fix a slew of warnings.

2003-12-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c

	Big purge of dead code from pre-CongDocumentTraversal implementation

	* cong-document-traversal.c, cong-editor-widget3.c

	Reduced excessive debug logging
